<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/changa_medium"
        android:text="@string/total_point_textview"
        android:textColor="@color/main_color"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/total_point_edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/main_border"
        android:ems="10"
        android:fontFamily="@font/changa_medium"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/total_point_edittext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/main_color"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/changa_medium"
        android:text="@string/first_point_textview"
        android:textColor="@color/main_color"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/first_type_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/main_border"
            android:fontFamily="@font/changa_medium"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/main_color"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/first_type_spinner"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:entries="@array/point_type_spinner" />

        <EditText
            android:id="@+id/first_number_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/main_border"
            android:ems="10"
            android:fontFamily="@font/changa_medium"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/number_edittext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/main_color"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/changa_medium"
        android:text="@string/second_point_textview"
        android:textColor="@color/main_color"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/second_type_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/main_border"
            android:fontFamily="@font/changa_medium"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/main_color"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/second_type_spinner"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:entries="@array/point_type_spinner" />

        <EditText
            android:id="@+id/second_number_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/main_border"
            android:ems="10"
            android:fontFamily="@font/changa_medium"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/number_edittext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/main_color"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/changa_medium"
        android:text="@string/third_point_textview"
        android:textColor="@color/main_color"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/third_type_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/main_border"
            android:fontFamily="@font/changa_medium"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/main_color"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/third_type_spinner"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:entries="@array/point_type_spinner" />

        <EditText
            android:id="@+id/third_number_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/main_border"
            android:ems="10"
            android:fontFamily="@font/changa_medium"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/number_edittext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/main_color"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:background="@color/main_color"
        android:fontFamily="@font/changa_medium"
        android:text="@string/submit_button"
        android:textColor="@color/white_color"
        android:textSize="24sp" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/accent_border"
        android:fontFamily="@font/changa_medium"
        android:text="@string/delete_button"
        android:textColor="@color/accent_color"
        android:textSize="24sp" />

</LinearLayout>